# newsbreak-marketing-sdk-python

./: .gitignore  README.md  pyproject.toml
example/demo/: ad.py  ad_set.py  campaign.py  main.py  schema.py  utils.py
src/newsbreak_marketing/: __init__.py  settings.py
src/newsbreak_marketing/ad/: __init__.py  ad_utils.py  asset.py  schema.py
src/newsbreak_marketing/ad_set/: __init__.py  adset_utils.py  schema.py
src/newsbreak_marketing/adset/: adset_utils.py  schema.py  target.json
src/newsbreak_marketing/campaign/: __init__.py  campaign_utils.py  schema.py
src/newsbreak_marketing/core/: base.py  schema.py
src/newsbreak_marketing/exceptions/: api.py
src/newsbreak_marketing/session/: create.py  schema.py
src/newsbreak_marketing/utils/: api_request.py
tests/: campain.py  test.ipynb
tests/demo/: ad.py  ad_set.py  campaign.py  campain.py  main.py  schema.py  util2.py  utils.py
